Your commit message

--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -47,6 +47,7 @@
 .remove-all-button {
   border: none;
   background-color: transparent;
+  font-weight: bold;
   color: rgb(96, 96, 167);
   cursor: pointer;
 }
